<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_activity_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_zhihu_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/wv_detail_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:overScrollMode="never"
                android:scrollbars="vertical" />
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/fl_detail_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_bottom_height"
        android:layout_gravity="bottom"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6dp">

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_detail_bottom_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/ic_daily_like"
                android:text="@string/detail_bottom_like"
                android:textColor="@color/bottom_text" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_detail_bottom_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/ic_daily_comment"
                android:text="@string/detail_bottom_commit"
                android:textColor="@color/bottom_text" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_detail_bottom_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/ic_daily_share"
                android:text="@string/detail_bottom_share"
                android:textColor="@color/bottom_text" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="top"
            android:background="#e8e8e8" />
    </FrameLayout>
</FrameLayout>
